--- a/app/ej24-consulta.html
+++ b/app/ej24-consulta.html
@@ -7,11 +7,14 @@
     <title>Document</title>
 </head>
 <body>
-        <form action = "Ej24-listado.php" method = "GET">
+        <form action = "ej24-listado.php" method = "GET">
             Tipo de lista: <input type ="text" name = "lista"/>
             <br/>
             <input type ="submit" name = "Enviar"/>
         </form>
+
+
+        <img src="../usuario/test.jpg">
 
 </body>
 </html>
